Исправлены ошибки, найденные в ходе тестирования